--- a/WhereToPlay/app/src/main/res/layout/activity_publication_evaluation.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_publication_evaluation.xml
@@ -171,6 +171,7 @@
                     android:layout_height="50dp"
                     android:gravity="center"
                     android:text="环境"
+                    android:layout_marginRight="12dp"
                     android:textColor="#666666"
                     android:textSize="16sp" />
 
@@ -199,7 +200,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:gravity="center"
-
+                    android:layout_marginRight="12dp"
                     android:text="气氛"
                     android:textColor="#666666"
                     android:textSize="16sp" />
@@ -231,6 +232,7 @@
                     android:layout_height="50dp"
                     android:gravity="center"
                     android:text="服务"
+                    android:layout_marginRight="12dp"
                     android:textColor="#666666"
                     android:textSize="16sp" />
 
