--- a/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -28,7 +29,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/bg_gray">
+            android:background="@color/pay_reserve_list_divider_white">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -43,7 +44,9 @@
                     android:paddingBottom="@dimen/padding_10"
                     android:paddingLeft="@dimen/padding_15"
                     android:paddingRight="@dimen/padding_15"
-                    android:paddingTop="@dimen/padding_10">
+                    android:paddingTop="@dimen/padding_10"
+                    android:background="@color/bg_gray"
+                    >
 
                     <ImageView
                         android:id="@+id/iv_reserve_info"
@@ -140,7 +143,8 @@
                     android:paddingLeft="@dimen/padding_15"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">
+                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
+                    android:background="@color/bg_gray">
 
 
                     <RadioButton
@@ -175,14 +179,12 @@
                     android:id="@+id/tv_reserve_info_name"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_40"
-                    android:layout_marginStart="@dimen/margin_15"
                     android:gravity="center_vertical"
                     android:text="@string/name"
-                    android:textColor="@color/text_red"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/rg_reserve_info"
-                    />
+                    tools:layout_editor_absoluteX="15dp"
+                    tools:layout_editor_absoluteY="296dp" />
 
                 <EditText
                     android:id="@+id/et_reserve_info_name"
@@ -219,7 +221,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/cellphone"
-                    android:textColor="@color/text_red"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_name"/>
@@ -256,7 +258,7 @@
                     android:layout_marginTop="@dimen/margin_5"
                     android:gravity="center_vertical"
                     android:text="@string/choose_room_category"
-                    android:textColor="@color/text_red"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_mobile"/>
@@ -269,7 +271,7 @@
                     android:gravity="center_vertical"
                     android:onClick="@{click.onViewClick}"
                     android:text="@string/please_choose_room_type"
-                    android:textColor="@color/text_black"
+                    android:textColor="@color/text_detail_white_bc"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toStartOf="@+id/iv_reserve_info_right"
                     app:layout_constraintStart_toEndOf="@+id/tv_reserve_info_room_category"
@@ -312,7 +314,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/arrive_time"
-                    android:textColor="@color/text_red"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_room_category"/>
@@ -325,7 +327,7 @@
                     android:gravity="center_vertical"
                     android:onClick="@{click.onViewClick}"
                     android:text="@string/please_choose_arrive_time"
-                    android:textColor="@color/text_black"
+                    android:textColor="@color/text_detail_white_bc"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toStartOf="@+id/iv_reserve_info_date"
                     app:layout_constraintStart_toEndOf="@+id/tv_reserve_info_reserve_time"
@@ -394,7 +396,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/carport"
-                    android:textColor="@color/text_red"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_reserve_time"/>
@@ -430,7 +432,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/number_of_people"
-                    android:textColor="@color/text_red"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintLeft_toRightOf="@+id/et_reserve_info_carport"
                     app:layout_constraintRight_toLeftOf="@+id/et_reserve_info_number_of_people"
@@ -470,7 +472,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/remark"
-                    android:textColor="@color/text_red"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_reserve_info_number_of_people"/>
@@ -493,11 +495,13 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/margin_5"
+                    android:layout_height="20dp"
                     android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_remark"/>
+                    app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_remark"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
 
                 <Button
                     android:id="@+id/btn_reserve_info_pay"
