--- a/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
@@ -174,17 +174,21 @@
                         android:textSize="@dimen/normal_textsize"/>
                 </RadioGroup>
 
-
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/"></android.support.constraint.ConstraintLayout>
                 <TextView
                     android:id="@+id/tv_reserve_info_name"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_40"
                     android:gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/margin_15"
                     android:text="@string/name"
                     android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
-                    tools:layout_editor_absoluteX="15dp"
-                    tools:layout_editor_absoluteY="296dp" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/rg_reserve_info" />
 
                 <EditText
                     android:id="@+id/et_reserve_info_name"
