--- a/WhereToPlay/app/src/main/res/layout/mine_commend_money.xml
+++ b/WhereToPlay/app/src/main/res/layout/mine_commend_money.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_15">
 
-        <ImageView
+        <com.fanc.wheretoplay.view.CircleImageView
             android:id="@+id/iv_mine_money"
             android:layout_width="@dimen/width_50"
             android:layout_height="@dimen/height_50"
