--- a/WhereToPlay/app/src/main/res/layout/fragment_advice_feedback.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_advice_feedback.xml
@@ -44,7 +44,8 @@
             android:padding="@dimen/padding_15"
             android:textColor="@color/text_black"
             android:textColorHint="@color/hint_advice_feedback"
-            android:textSize="@dimen/normal_textsize"/>
+            android:textSize="@dimen/normal_textsize"
+            />
 
         <TextView
             android:layout_width="match_parent"
