--- a/WhereToPlay/app/src/main/res/layout/view_topmenu.xml
+++ b/WhereToPlay/app/src/main/res/layout/view_topmenu.xml
@@ -17,15 +17,23 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/v_statubar">
 
-
-            <ImageView
-                android:id="@+id/menu_iv_lefticon"
+            <LinearLayout
+                android:id="@+id/ll_top_menu"
                 android:layout_width="@dimen/menu_height"
                 android:layout_height="@dimen/menu_height"
                 android:layout_centerVertical="true"
-                android:scaleType="center"
-                android:layout_alignParentStart="true"
-                />
+                android:layout_alignParentStart="true">
+
+                <ImageView
+                    android:id="@+id/menu_iv_lefticon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_15"
+                    android:layout_gravity="center_vertical"
+                    android:scaleType="center"
+                    />
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/menu_tv_lefttext"
