--- a/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
@@ -302,6 +302,56 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_room_category"/>
 
 
+                <TextView
+                    android:id="@+id/tv1"
+                    android:layout_width="@dimen/width_60"
+                    android:layout_height="@dimen/height_40"
+                    android:layout_marginLeft="@dimen/margin_15"
+                    android:layout_marginTop="@dimen/margin_1"
+                    android:gravity="center_vertical"
+                    android:text="选择房号"
+                    android:textColor="@color/text_black"
+                    android:textSize="@dimen/normal_textsize"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_room_category"/>
+
+
+                <TextView
+                    android:id="@+id/tv2"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_40"
+                    android:layout_marginLeft="@dimen/margin_90"
+                    android:gravity="center_vertical"
+                    android:onClick="@{click.onViewClick}"
+                    android:text="请选择房号"
+                    android:textColor="@color/text_detail_white_bc"
+                    android:textSize="@dimen/normal_textsize"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_reserve_info_right"
+                    app:layout_constraintStart_toEndOf="@+id/tv1"
+                    app:layout_constraintTop_toTopOf="@+id/tv1"/>
+
+
+
+                <ImageView
+                    android:id="@+id/iv3"
+                    android:layout_width="@dimen/width_40"
+                    android:layout_height="@dimen/height_40"
+                    android:onClick="@{click.onViewClick}"
+                    android:padding="@dimen/padding_12"
+                    android:src="@drawable/right"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tv1"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/line_height"
+                    android:background="@color/pay_reserve_list_divider_white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv1"/>
+
+
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/line_height"
@@ -323,7 +373,7 @@
                     android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_room_category"/>
+                    app:layout_constraintTop_toBottomOf="@+id/tv1"/>
 
                 <TextView
                     android:id="@+id/tv_reserve_info_time"
