--- a/WhereToPlay/app/src/main/res/layout/fragment_mine.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_mine.xml
@@ -127,6 +127,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:onClick="@{click.onViewClick}"/>
+
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_referral"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"
+                    android:layout_marginTop="@dimen/margin_10"/>
                 <com.fanc.wheretoplay.view.ItemView
                     android:id="@+id/iv_mine_commend_friend"
                     android:layout_width="match_parent"
@@ -138,15 +145,16 @@
                     android:layout_height="wrap_content"
                     android:onClick="@{click.onViewClick}"/>
 
+
+
                 <com.fanc.wheretoplay.view.ItemView
-                    android:id="@+id/iv_mine_referral"
+                    android:id="@+id/iv_mine_drive"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:onClick="@{click.onViewClick}"
                     android:layout_marginTop="@dimen/margin_10"/>
-
                 <com.fanc.wheretoplay.view.ItemView
-                    android:id="@+id/iv_mine_drive"
+                    android:id="@+id/iv_mine_service"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:onClick="@{click.onViewClick}"/>
