--- a/WhereToPlay/app/src/main/res/layout/fragment_referrals.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_referrals.xml
@@ -84,7 +84,7 @@
             android:textColor="@color/text_black"
             android:textSize="@dimen/normal_textsize"/>
 
-        <TextView
+        <EditText
             android:id="@+id/tv_referral_mine_code"
             android:layout_width="@dimen/width_180"
             android:layout_height="wrap_content"
@@ -93,7 +93,8 @@
             android:padding="@dimen/padding_5"
             android:paddingTop="@dimen/padding_5"
             android:text="HL12"
-            android:textColor="@color/text_red"/>
+            android:textColor="@color/text_red"
+            android:textIsSelectable="true"/>
 
         <TextView
             android:layout_width="wrap_content"
