--- a/WhereToPlay/app/src/main/res/values/colors.xml
+++ b/WhereToPlay/app/src/main/res/values/colors.xml
@@ -30,6 +30,8 @@
     <color name="text_gray">#999999</color>
     <color name="pink">#F3DAD8</color>
 
+    <!--带透明度的颜色-->
+    <color name="text_gray_translucent">#4D999999</color>
 
     <!--常用颜色-->
     <color name="black">#000000</color>
