--- a/WhereToPlay/app/src/main/res/layout/layout_dialog_share.xml
+++ b/WhereToPlay/app/src/main/res/layout/layout_dialog_share.xml
@@ -2,21 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-
     <LinearLayout
         android:background="#ffffff"
         android:id="@+id/pop_layout"
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:orientation="vertical">
 
         <LinearLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -46,19 +45,6 @@
                 android:drawableTop="@drawable/btn_forword_weibo"
                 android:gravity="center_horizontal"
                 android:text="新浪微博"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/pop_layout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-
-            android:gravity="center"
-            android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/btn_share_qq"
                 android:layout_width="0dp"
@@ -67,6 +53,18 @@
                 android:drawableTop="@drawable/btn_forword_qq"
                 android:gravity="center_horizontal"
                 android:text="QQ好友"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/pop_layout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/btn_share_qzone"
@@ -86,6 +84,40 @@
                 android:gravity="center_horizontal"
                 android:text="短信"/>
 
+            <TextView
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+
+                android:gravity="center_horizontal"
+               />
+
+            <TextView
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+
+                android:gravity="center_horizontal"
+                />
+
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:background="#E5e5e5"
+            android:layout_marginTop="15dp"
+
+            android:layout_height="1dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:paddingTop="15dp"
+            android:id="@+id/tv_cancel"
+            android:text="取消"
+            android:textColor="#333333"
+            android:textSize="16sp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
